--- a/Frontend/Landing_page/src/app/header/header.component.html
+++ b/Frontend/Landing_page/src/app/header/header.component.html
@@ -12,6 +12,7 @@
     </div>
     <div class="user-options">
       <span class="privacy-policy">Privacy Policy</span>
+
       <a routerLink="/location" class="user-location">
         <i class="fas fa-map-marker-alt"></i> Location
       </a>
@@ -63,6 +64,8 @@
       <li><a href="#booking">Booking</a></li>
       <li><a href="#service-list">Service</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="#news">News</a></li>
+
     </ul>
   </nav>
 </header>
