--- a/Frontend/Landing_page/src/app/location/location.component.css
+++ b/Frontend/Landing_page/src/app/location/location.component.css
@@ -22,7 +22,8 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+  max-height: 500px;
+  overflow-y:auto ;
 }
 
 .shop-list h3 {
