--- a/Frontend/Landing_page/src/app/app.component.html
+++ b/Frontend/Landing_page/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- <app-header></app-header> -->
 <router-outlet></router-outlet>
+
 <app-chatbot></app-chatbot>
+
 
 <!-- Scroll to Top Button -->
 <button id="scrollToTopBtn" class="scroll-to-top-btn" (click)="scrollToTop()">
@@ -9,3 +11,12 @@
 
 
 <!-- <app-footer></app-footer> -->
+<!-- <div *ngIf="isOpen" class="popup-overlay">
+  <div class="popup-content">
+    <h1>hi</h1>
+    <button (click)="closePop()">close</button>
+  </div>
+</div> -->
+
+<!-- <button (click)="openPop()">open</button> -->
+
