--- a/Frontend/Landing_page/src/app/feedback/feedback.component.html
+++ b/Frontend/Landing_page/src/app/feedback/feedback.component.html
@@ -1,4 +1,4 @@
-<div class="container py-5">
+<!-- <div class="container py-5">
   <h2 class="text-center mb-5">What Our Customers Say</h2>
   <div id="customer-carousel" class="owl-carousel owl-theme">
     <div class="item" *ngFor="let testimonial of testimonials">
@@ -10,7 +10,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="container-fluid feedback d-flex justify-content-center align-items-center " id="feedback">
   <div class="main">
