--- a/Frontend/Landing_page/src/app/app.component.css
+++ b/Frontend/Landing_page/src/app/app.component.css
@@ -23,3 +23,25 @@
   font-size: 36px;  /* Size of the icon */
   color: black;  /* Change icon color to black */
 }
+/* .popup-overlay{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  backdrop-filter: blur(10px);
+  
+}
+.popup-content{
+background-color: rgb(230, 228, 228);
+width: 300px;
+height: 200px;
+text-align: center;
+border: 1px solid black;
+border-radius: 5px;
+position: relative;
+
+} */
