--- a/Frontend/Landing_page/src/app/login/login.component.css
+++ b/Frontend/Landing_page/src/app/login/login.component.css
@@ -65,19 +65,9 @@ button:hover {
 .input-field {
   margin-left: 80px;
 }
-
-/* .vertical-line {
-  height: 100%;
-  width: 2px;
-  background: #f4f9fd;
-  margin-top: 0;
-  margin-bottom: 0;
-} */
-
 .col-md-1, .col-md-6, .col-md-5 {
   background: #f4f9fd;
 }
-
 .col-md-1 {
   padding-left: 0;
   padding-right: 0;
@@ -86,22 +76,18 @@ button:hover {
   align-items: stretch;
   height: 100%;
 }
-
 .col-md-6 {
   padding-left: 0;
   padding-right: 0;
 }
-
 .col-md-5 {
   background-color: white;
 }
-
 .image img {
   width: 100%;
   height: auto;
   border-radius: 15px; 
 }
-
 .text-center {
   font-size: 14px;
   font-family: 'Arial', sans-serif;
@@ -112,18 +98,15 @@ button:hover {
   font-weight: bold;
   color: #8347ad;
 }
-
 @media (max-width: 768px) {
   .col-12 {
     width: 100% !important; 
   }
-
-  .main {
+ .main {
     flex-direction: column; 
     height: auto; 
   }
-
-  .vertical-line {
+.vertical-line {
     width: 100%; 
     height: 2px;
     background: #8347ad;
@@ -132,5 +115,53 @@ button:hover {
   .col-md-6 {
     margin-top: 30px;
   }
+}
+.popup-overlay{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  backdrop-filter: blur(4px);
+  z-index: 100;
+ 
+}
+.popup-content{
+padding: 10px;
+background-color: #f4f9fd;
+width: 500px;
+height: 400px;
+text-align: center;
+border: 2px solid #89abc7;
+border-radius: 25px;
+position: relative;
+}
+input:focus {
+  outline: none; 
+  border-color: #8347ad;
+  box-shadow: 0 4px 8px rgba(131, 71, 173, 0.4); 
+  background-color: white; 
+}
+.close-btn {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  background: none;
+  border: none;
+  color: #8347ad;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+.popup-content .text-danger {
+  text-align: left; /* Align error to the left in forgot password form */
+  font-size: 0.875rem;
+  margin-top: 5px;
+  color: #e74c3c;
+  margin-left: 65px;
 }
 
