--- a/Frontend/Landing_page/src/app/header/header.component.html
+++ b/Frontend/Landing_page/src/app/header/header.component.html
@@ -63,7 +63,7 @@
       
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#dasboard">Booking</a></li>
+        <li><a href="#booking">Booking</a></li>
         <li><a href="#service-list">Service</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
