--- a/Frontend/Landing_page/src/app/location/location.component.html
+++ b/Frontend/Landing_page/src/app/location/location.component.html
@@ -1,4 +1,4 @@
-
+<!-- <app-header></app-header> -->
 
 <div class="container">
   <div class="map-container">
@@ -18,3 +18,4 @@
   </div>
 </div>
 
+<!-- <app-footer></app-footer> -->
