--- a/Frontend/Landing_page/src/app/users/users.component.html
+++ b/Frontend/Landing_page/src/app/users/users.component.html
@@ -33,10 +33,10 @@
       <tbody>
         <tr *ngFor="let user of filteredUsers; let i = index">
           <td>{{ i + 1 }}</td>
-          <td>{{ user.name }}</td>
-          <td>{{ user.email }}</td>
-          <td>{{ user.address }}</td>
-          <td>{{ user.mobile }}</td>
+          <td>{{ user.userName }}</td>
+          <td>{{ user.userEmail }}</td>
+          <td>{{ user.userAddress }}</td>
+          <td>{{ user.userMobile }}</td>
         </tr>
       </tbody>
     </table>
