--- a/Frontend/Landing_page/src/app/admin-header/admin-header.component.html
+++ b/Frontend/Landing_page/src/app/admin-header/admin-header.component.html
@@ -34,7 +34,7 @@
     <ul>
       <li class="nav-item">
         <a
-        href="/dashboard"
+        routerLink="/dashboard"
          
         >
           <span class="icon">
@@ -51,7 +51,7 @@
 
       <li class="nav-item ">
         <a
-        href="/users"      
+        routerLink="/users"      
         >
           <span class="icon">
             <i class="bi bi-people-fill"></i>
@@ -64,7 +64,7 @@
 
       <li class="nav-item">
         <a 
-        href="/userfeedback"          >
+        routerLink="/userfeedback"          >
           <span class="icon">
             <i class="bi bi-ui-radios"></i>
           </span>
@@ -74,7 +74,7 @@
 
       <li class="nav-item ">
         <a
-        href="/userbookings"      
+        routerLink="/userbookings"      
         >
           <span class="icon">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -91,7 +91,7 @@
 
       <li class="nav-item">
         <a
-        href="/showrooms"           
+        routerLink="/showrooms"           
         >
           <span class="icon">
             <i class="bi bi-buildings-fill"></i>
@@ -102,7 +102,7 @@
   
       <li class="nav-item">
         <a
-        href="/contact-query"           
+        routerLink="/contact-query"           
         >
           <span class="icon">
             <i class="bi bi-question-square-fill"></i>
@@ -111,7 +111,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="/notifications">
+        <a routerLink="/notifications">
           <span class="icon">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -130,7 +130,7 @@
 
       <li class="nav-item">
         <a 
-        href="/settings"          >
+        routerLink="/settings"          >
           <span class="icon">
             <i class="bi bi-gear-fill"></i>
           </span>
