--- a/Frontend/Landing_page/src/app/footer/footer.component.html
+++ b/Frontend/Landing_page/src/app/footer/footer.component.html
@@ -1,11 +1,12 @@
+
 <div class="footer">
   <div class="container">
     <div class="row footer-row">
       <div class="footer-col">
-        <h5>Company Name</h5>
-        <p>Address, City, Country</p>
-        <p>Phone: +1 234 567 890</p>
-        <p>Email: infocompany.com</p>
+        <h5>MyRNM</h5>
+        <p>Mahindhra World City, Chengalpattu, Chennai, India</p>
+        <p>Phone: 9632587415</p>
+        <p>Email: myrnmsupport&#64;gmail.com</p>
       </div>
 
       <div class="footer-col">
@@ -25,33 +26,39 @@
           <li><a href="#service-list">Value Care</a></li>
         </ul>
       </div>
-<div class="footer-col">
+      <div class="footer-col">
         <h5>Useful Links</h5>
         <ul class="footer-links">
           <li><a href="https://rntbci.in/">RNTBCI</a></li>
           <li><a href="https://www.renault.co.in/">Renault India</a></li>
           <li><a href="https://www.nissan.in/">Nissan India</a></li>
-          <li><a href="https://mitsubishielectric.in/">Mitsubishi Motors</a></li>
+          <li>
+            <a href="https://mitsubishielectric.in/">Mitsubishi Motors</a>
+          </li>
         </ul>
       </div>
 
       <div class="footer-col">
         <div class="social-icons">
-          <h4>Follow us</h4><a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+          <h4>Follow us</h4>
+          <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
 
-
-    <div class="footer-bottom">
-      <div class="container" id="Copyright">
-        <div class="row">
-          <div class="col-12 text-center">
-            <p>&copy; {{ currentYear }} Company Name. All Rights Reserved.</p>
-            <div>
-              <a href="/privacy-policy" class="footer-link">Privacy Policy</a> |
-              <a href="/terms-of-service" class="footer-link">Terms of Service</a>
+      <div class="footer-bottom">
+        <div class="container" id="Copyright">
+          <div class="row">
+            <div class="col-12 text-center">
+              <p>&copy; {{ currentYear }} Company Name. All Rights Reserved.</p>
+              <div>
+                <a href="/privacy-policy" class="footer-link">Privacy Policy</a>
+                |
+                <a href="/terms-of-service" class="footer-link"
+                  >Terms of Service</a
+                >
+              </div>
             </div>
           </div>
         </div>
