--- a/Frontend/Landing_page/src/app/home/home.component.css
+++ b/Frontend/Landing_page/src/app/home/home.component.css
@@ -30,8 +30,9 @@
 /* Style the home section */
 .home {
   position: relative;
+  background-color: black;
   width: 100%;
-  height: 80vh; /* Full screen height */
+  height: 100vh; 
   margin: 0; /* Remove any margin that might add white space */
   padding: 0; /* Remove any padding */
   overflow: hidden; /* Hide overflow to ensure the video fits */
@@ -39,6 +40,7 @@
 
 /* Make the video container responsive and reduce height */
 .video-container {
+  background-color: black;
   position: absolute;
   top: 0;
   left: 0;
@@ -49,6 +51,7 @@
   align-items: center;
   overflow: hidden; /* Hide overflow to ensure the video fills the container */
 }
+
 
 .video-container video {
   object-fit: cover; /* Ensures the video fills the container without distortion */
